# pixel-art-generator

./: CHANGELOG.md  README.md  pixel-art-generator.cabal
app/: Main.hs
src/: PixelImage.hs  Transformation.hs
static/css/: style.css
