name:                pixel-art-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pixel-art-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Ivanov
maintainer:          kirill.dm.ivanov@gmail.com
copyright:           2022 Kirill Ivanov
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
extra-source-files:
    README.md
    CHANGELOG.md

executable pixel-art-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
