name:                pixel-art-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://https://github.com/FP-JUB-2022/pixel-art-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Ivanov
maintainer:          kirill.dm.ivanov@gmail.com
copyright:           2022 Kirill Ivanov
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
extra-source-files:
    README.md
    CHANGELOG.md

library PixelImage
  exposed-modules:    PixelImage
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , JuicyPixels >= 3.3.7
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints  

executable pixel-art-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       PixelImage
                     , base >= 4.7 && < 5
                     , Spock >= 0.14
                     , mtl
                     , text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
